hphp/hack/test/typecheck/constraints/class_method_tparam.php.exp
File "class_method_tparam.php", line 6, characters 28-44:
Some type arguments violate their constraints (Typing[4323])
  File "class_method_tparam.php", line 3, characters 22-22:
  `T` is a constrained type parameter
  File "class_method_tparam.php", line 3, characters 27-29:
  This type constraint is violated
  File "class_method_tparam.php", line 3, characters 27-29:
  Expected `num`
  File "class_method_tparam.php", line 6, characters 39-43:
  But got `mixed`
